site-specific configuration

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -9,7 +9,8 @@
   },
   "content": {
     "collections": {
-      "pages": "Pages"
+      "pages": "English",
+      "sv_pages": "Swedish"
     }
   },
   "dateTime": {
