add demo blog section

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -10,7 +10,8 @@
   "content": {
     "collections": {
       "pages": "English",
-      "sv_pages": "Swedish"
+      "sv_pages": "Swedish",
+      "sv_blog": "Blog (Swedish)"
     }
   },
   "dateTime": {
